<resources>
    <string name="app_name">Cinthya_GithubUserApp3</string>
    <string name="search_hint">Masukkan Username</string>
    <string name="user_username">Username</string>
    <string name="user_name">Nama</string>
    <string name="user_follower">Followers</string>
    <string name="user_following">Following</string>
    <string name="user_location">Location</string>
    <string name="user_company">Company</string>
    <string name="user_repository">Repository</string>
    <string name="name">Name :</string>
    <string name="repository">Repository :</string>
    <string name="location">Location :</string>
    <string name="company">Company :</string>
    <string name="tab_text_1">Follower(s)</string>
    <string name="tab_text_2">Following</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="people_symbol">People Symbol</string>
    <string name="follower_count">%1$d Follower(s)</string>
    <string name="following_count">%1$d Following</string>
    <string name="identity_symbol">Identity Symbol</string>
    <string name="book_symbol">Book Symbol</string>
    <string name="location_symbol">Location Symbol</string>
    <string name="city_symbol">City Symbol</string>
    <string name="search_background">Search Background</string>
    <string name="menu_1">Favourite</string>
    <string name="menu_2">Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="daftar_favorite">Daftar User Favorit</string>
    <string name="favorite_fab">Favorite FAB</string>
</resources>