<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor_two"
    android:orientation="vertical"
    tools:context=".ui.main.DetailActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/show_avatar"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center_horizontal"
        app:civ_border_color="@color/bgcolor_three"
        app:civ_border_width="1dp"
        app:layout_constraintBottom_toTopOf="@id/show_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/show_username"
        style="@style/Bigfont.bigger"
        android:text="@string/user_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_avatar" />

    <ImageView
        android:id="@+id/people"
        style="@style/detailsymbol"
        android:contentDescription="@string/people_symbol"
        android:src="@drawable/ic_baseline_people_24"
        app:layout_constraintTop_toBottomOf="@id/show_username"
        app:layout_constraintEnd_toStartOf="@+id/show_followers"
        app:layout_constraintRight_toLeftOf="@id/show_followers" />

    <TextView
        android:id="@+id/show_followers"
        style="@style/detailinformation.important"
        android:layout_marginEnd="8dp"
        android:text="@string/user_follower"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/show_username" />

    <ImageView
        android:contentDescription="@string/people_symbol"
        android:id="@+id/people_two"
        style="@style/detailsymbol"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_baseline_people_24"
        app:layout_constraintStart_toEndOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/show_username"
        app:layout_constraintRight_toLeftOf="@id/show_following" />

    <TextView
        android:id="@+id/show_following"
        style="@style/detailinformation.important"
        android:text="@string/user_following"
        app:layout_constraintStart_toEndOf="@+id/people_two"
        app:layout_constraintTop_toBottomOf="@id/show_username" />

    <ImageView
        android:contentDescription="@string/identity_symbol"
        android:id="@+id/symbol_identity"
        style="@style/detailsymbol"
        android:src="@drawable/ic_baseline_perm_identity_24"
        app:layout_constraintTop_toBottomOf="@id/show_followers"
        app:layout_constraintEnd_toStartOf="@+id/info_name"
        app:layout_constraintRight_toLeftOf="@id/info_name" />

    <TextView
        android:id="@+id/info_name"
        style="@style/detailinformation"
        app:layout_constraintTop_toBottomOf="@id/show_followers"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        android:layout_marginEnd="10dp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/show_name"
        style="@style/detailinformation"
        android:text="@string/user_name"
        app:layout_constraintStart_toEndOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/show_following"
        android:layout_marginStart="10dp"/>

    <ImageView
        android:contentDescription="@string/book_symbol"
        style="@style/detailsymbol"
        android:id="@+id/symbol_book"
        android:src="@drawable/ic_baseline_book_24"
        app:layout_constraintTop_toBottomOf="@id/symbol_identity"
        app:layout_constraintEnd_toStartOf="@+id/info_repo"
        app:layout_constraintRight_toLeftOf="@id/info_repo" />

    <TextView
        android:id="@+id/info_repo"
        style="@style/detailinformation"
        app:layout_constraintTop_toBottomOf="@id/info_name"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        android:layout_marginEnd="10dp"
        android:text="@string/repository" />

    <TextView
        android:id="@+id/show_repo"
        style="@style/detailinformation"
        android:text="@string/user_repository"
        app:layout_constraintStart_toEndOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/show_name"
        android:layout_marginStart="10dp"/>

    <ImageView
        android:contentDescription="@string/location_symbol"
        style="@style/detailsymbol"
        android:id="@+id/symbol_location"
        android:src="@drawable/ic_baseline_location_on_24"
        app:layout_constraintTop_toBottomOf="@id/symbol_book"
        app:layout_constraintEnd_toStartOf="@+id/info_location"
        app:layout_constraintRight_toLeftOf="@id/info_location" />

    <TextView
        style="@style/detailinformation"
        android:id="@+id/info_location"
        app:layout_constraintTop_toBottomOf="@id/info_repo"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        android:layout_marginEnd="10dp"
        android:text="@string/location" />

    <TextView
        android:id="@+id/show_location"
        style="@style/detailinformation"
        android:text="@string/user_location"
        app:layout_constraintStart_toEndOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/show_repo"
        android:layout_marginStart="10dp"/>

    <ImageView
        android:contentDescription="@string/city_symbol"
        android:id="@+id/symbol_city"
        style="@style/detailsymbol"
        android:src="@drawable/ic_baseline_location_city_24"
        app:layout_constraintTop_toBottomOf="@id/symbol_location"
        app:layout_constraintEnd_toStartOf="@+id/info_company"
        app:layout_constraintRight_toLeftOf="@id/info_company" />

    <TextView
        android:id="@+id/info_company"
        style="@style/detailinformation"
        android:text="@string/company"
        app:layout_constraintTop_toBottomOf="@id/info_location"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@id/guideline2"/>

    <TextView
        android:id="@+id/show_company"
        style="@style/detailinformation"
        android:text="@string/user_company"
        app:layout_constraintStart_toEndOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/show_location"
        android:layout_marginStart="10dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:indeterminateTint="@color/bgcolor_five"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_company">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:tabTextColor="@android:color/white" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_love"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:foregroundGravity="bottom"
        android:backgroundTint="@color/bgcolor_two"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_favorite_borde"
        android:contentDescription="@string/favorite_fab"
        />

</androidx.constraintlayout.widget.ConstraintLayout>